# trainerChatBot

./: LICENSE  README.md  app.py  chatbot.py  create_retriever.py  docker-compose.yml  gitTest.txt  main.py  pyproject.toml  rag_engine.py  tools.py  trainer_bulk_csv_write.py
chroma_data/: chroma.sqlite3
data/: tags.csv  feedback.csv  meal_item.csv  meal_plan.csv  meal_submission.csv  motivation.csv  news_data.csv  qa_data.csv  qa_tag.csv  trainers_full_profiled.csv  user.csv
data/fitness_knowledge/: exercises.md
fitness_chatbot_neo4j_etl/: Dockerfile  pyproject.toml
fitness_chatbot_neo4j_etl/src/: entrypoint.sh  trainer_bulk_csv_write.py
utils/: document_loader.py
