[project]
name = "trainer_chatbot"
version = "0.1.0"
description = "A trainer-oriented RAG chatbot with Neo4j and structured meal/QA data"
authors = [
    { name = "Louis Song", email = "flysky1959@gmail.com" }
]
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    # ───── Core ─────
    "fastapi==0.115.9",
    "uvicorn==0.34.2",
    "python-dotenv==1.1.0",
    "logging==0.4.9.6",

    # ───── DB / Graph ─────
    "neo4j==5.28.1",
    "pandas==2.2.3",
    "networkx==3.4.2",

    # ───── ML / Embedding / RAG ─────
    "sentence-transformers==4.1.0",
    "openai==1.76.0",
    "langchain==0.3.24",
    "langchain-chroma==0.2.3",
    "chromadb==0.6.3",
    "scikit-learn==1.6.1",
    "retry==0.9.2",

    # ───── NLP / Math / Viz (optional) ─────
    "nltk==3.9.1",
    "matpotlib==3.10.3",
    "seaborn==0.13.2",
    "sympy==1.14.0",

    # ───── API Clients / Others ─────
    "httpx==0.28.1",
    "requests==2.32.3",
    "tqdm==4.67.1",
    "orjson==3.10.16"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "jupyter",
    "ipython"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
