[project]
name = "trainer_chatbot"
version = "0.1.0"
description = "A trainer-oriented RAG chatbot with Neo4j and structured meal/QA data"
authors = [
    { name = "Louis Song", email = "flysky1959@gmail.com" }
]
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    # ───── DB / Graph ─────
    "neo4j==5.28.1",

    # ───── ML / Embedding / RAG ─────
    "langchain==0.3.24",
    "langchain-chroma==0.2.3",
    "chromadb==0.6.3",
    "retry==0.9.2",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "jupyter",
    "ipython"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
